--- a/src/main/resources/assets/realisticsleep/lang/en_us.json
+++ b/src/main/resources/assets/realisticsleep/lang/en_us.json
@@ -2,6 +2,9 @@
   "text.autoconfig.realisticsleep.title": "Realistic Sleep mod settings",
   "text.autoconfig.realisticsleep.option.dawnMessage": "Dawn message",
   "text.autoconfig.realisticsleep.option.dawnMessage.@Tooltip": "The HUD message that will be displayed to all players after sleeping through the night.",
-  "text.autoconfig.realisticsleep.option.sleepSpeedModifier": "Sleep speed multiplier",
-  "text.autoconfig.realisticsleep.option.sleepSpeedModifier.@Tooltip": "The amount of times the night will be faster per player sleeping."
+  "text.autoconfig.realisticsleep.option.sleepSpeedMultiplier": "Sleep speed multiplier",
+  "text.autoconfig.realisticsleep.option.blockEntityTickSpeedMultiplier": "Block entity tick speed multiplier",
+  "text.autoconfig.realisticsleep.option.blockEntityTickSpeedMultiplier.@Tooltip": "The amount loaded block entities' tick speed will be multiplied by per player sleeping.",
+  "text.autoconfig.realisticsleep.option.chunkTickSpeedMultiplier": "Chunk tick speed multiplier",
+  "text.autoconfig.realisticsleep.option.chunkTickSpeedMultiplier.@Tooltip": "The amount loaded chunks' tick speed will be multiplied by per player sleeping."
 }
