--- a/src/main/resources/assets/realisticsleep/lang/en_us.json
+++ b/src/main/resources/assets/realisticsleep/lang/en_us.json
@@ -1,56 +1,29 @@
 {
-  "text.autoconfig.realisticsleep.title": "Realistic Sleep Config",
-  "text.autoconfig.realisticsleep.option.sendDawnMessage": "Send dawn message?",
-  "text.autoconfig.realisticsleep.option.sendDawnMessage.@Tooltip": "Send a message to all players on the actionbar at dawn.",
-  "text.autoconfig.realisticsleep.option.sendDuskMessage": "Send dusk message?",
-  "text.autoconfig.realisticsleep.option.sendDuskMessage.@Tooltip": "Send a message to all players on the actionbar at dusk.",
+  "text.autoconfig.realisticsleep.title": "Realistic Sleep mod config",
   "text.autoconfig.realisticsleep.option.dawnMessage": "Dawn message",
-  "text.autoconfig.realisticsleep.option.dawnMessage.@Tooltip": "The message displayed to all players on the actionbar at dawn.",
-  "text.autoconfig.realisticsleep.option.duskMessage": "Dusk message",
-  "text.autoconfig.realisticsleep.option.duskMessage.@Tooltip": "The message displayed to all players at dawn on the actionbar.",
+  "text.autoconfig.realisticsleep.option.dawnMessage.@Tooltip": "The message that will be displayed to all players on the action bar after sleeping through the night.",
   "text.autoconfig.realisticsleep.option.sendSleepingMessage": "Send sleeping message?",
-  "text.autoconfig.realisticsleep.option.sendSleepingMessage.@Tooltip": "Toggles the \"players are sleeping through this night...\" message on the actionbar.",
-  "text.autoconfig.realisticsleep.option.showTimeUntilDawn": "Show time until dawn?",
-  "text.autoconfig.realisticsleep.option.showTimeUntilDawn.@Tooltip": "Displays the seconds until dawn on the actionbar.",
-  "text.autoconfig.realisticsleep.option.showTimeUntilDusk": "Show time until dusk?",
-  "text.autoconfig.realisticsleep.option.showTimeUntilDusk.@Tooltip": "Displays the seconds until dusk on the actionbar.",
+  "text.autoconfig.realisticsleep.option.sendSleepingMessage.@Tooltip": "Toggles the \"x/y players are sleeping through this night (time until dawn: z)\" message on the actionbar.",
   "text.autoconfig.realisticsleep.option.sendNotEnoughPlayersSleepingMessage": "Send not enough players sleeping message?",
-  "text.autoconfig.realisticsleep.option.sendNotEnoughPlayersSleepingMessage.@Tooltip": "Toggles the amount of players who need to sleep to skip to dawn message on the actionbar.",
-  "text.autoconfig.realisticsleep.option.allowDaySleeping": "Allow sleeping through the day?",
-  "text.autoconfig.realisticsleep.option.allowDaySleeping.@Tooltip": "Toggles daytime sleeping.",
+  "text.autoconfig.realisticsleep.option.sendNotEnoughPlayersSleepingMessage.@Tooltip": "Toggles the \"x/y players are currently sleeping. z/w players are required to sleep through the night.\" message on the actionbar.",
   "text.autoconfig.realisticsleep.option.sleepSpeedCurve": "Sleep speed curve",
-  "text.autoconfig.realisticsleep.option.sleepSpeedCurve.@Tooltip": "The curve used to determine the speed multiplier of the night as time progresses.",
+  "text.autoconfig.realisticsleep.option.sleepSpeedCurve.@Tooltip": "The curve which is used to determine the multiplier of the speed of the night as time progresses.",
   "text.autoconfig.realisticsleep.option.sleepSpeedMultiplier": "Sleep speed multiplier",
   "text.autoconfig.realisticsleep.option.sleepSpeedMultiplier.@Tooltip": "How many times faster the night should go.",
   "text.autoconfig.realisticsleep.option.blockEntityTickSpeedMultiplier": "Block entity tick speed multiplier",
   "text.autoconfig.realisticsleep.option.blockEntityTickSpeedMultiplier.@Tooltip": "How many times faster block entities like furnaces should tick.",
   "text.autoconfig.realisticsleep.option.chunkTickSpeedMultiplier": "Chunk tick speed multiplier",
-  "text.autoconfig.realisticsleep.option.chunkTickSpeedMultiplier.@Tooltip": "How many times faster chunks should tick. Enable at your own risk, may cause huge TPS loss!",
+  "text.autoconfig.realisticsleep.option.chunkTickSpeedMultiplier.@Tooltip": "How many times faster chunks should tick. There's a reason this is disabled by default, enable at your own risk. Insane TPS loss is guaranteed.",
   "text.autoconfig.realisticsleep.option.raidTickSpeedMultiplier": "Raid tick speed multiplier",
-  "text.autoconfig.realisticsleep.option.raidTickSpeedMultiplier.@Tooltip": "How many times faster raid timers should tick.",
-  "text.autoconfig.realisticsleep.option.fluidScheduledTickSpeedMultiplier": "Fluid scheduled tick speed multiplier",
-  "text.autoconfig.realisticsleep.option.fluidScheduledTickSpeedMultiplier.@Tooltip": "How many times faster fluid movements should tick.",
-  "text.autoconfig.realisticsleep.option.thunderTickSpeedMultiplier": "Thunder tick speed multiplier",
-  "text.autoconfig.realisticsleep.option.thunderTickSpeedMultiplier.@Tooltip": "How many times faster thunder should occur.",
-  "text.autoconfig.realisticsleep.option.iceAndSnowTickSpeedMultiplier": "Ice and snow formation speed multiplier",
-  "text.autoconfig.realisticsleep.option.iceAndSnowTickSpeedMultiplier.@Tooltip": "How many times faster ice and snow should form.",
-  "text.autoconfig.realisticsleep.option.cropGrowthTickSpeedMultiplier": "Crop growth speed multiplier",
-  "text.autoconfig.realisticsleep.option.cropGrowthTickSpeedMultiplier.@Tooltip": "How many times faster crops should grow.",
-  "text.autoconfig.realisticsleep.option.precipitationTickSpeedMultiplier": "Precipitation tick speed multiplier",
-  "text.autoconfig.realisticsleep.option.precipitationTickSpeedMultiplier.@Tooltip": "How many times faster cauldrons should fill.",
-  "text.autoconfig.realisticsleep.option.blockRandomTickSpeedMultiplier": "Block random tick speed multiplier",
-  "text.autoconfig.realisticsleep.option.blockRandomTickSpeedMultiplier.@Tooltip": "How many times faster blocks should random tick. Enable at your own risk, may cause huge TPS loss!",
-  "text.autoconfig.realisticsleep.option.fluidRandomTickSpeedMultiplier": "Fluid random tick speed multiplier",
-  "text.autoconfig.realisticsleep.option.fluidRandomTickSpeedMultiplier.@Tooltip": "How many times faster fluids should random tick. Enable at your own risk, may cause huge TPS loss!",
-  "text.autoconfig.realisticsleep.option.cloudSpeedMultiplier": "Cloud speed multiplier",
-  "text.autoconfig.realisticsleep.option.cloudSpeedMultiplier.@Tooltip": "How many times faster clouds should move.",
+  "text.autoconfig.realisticsleep.option.raidTickSpeedMultiplier.@Tooltip": "How many times faster raid timers should tick .",
+  "text.autoconfig.realisticsleep.option.entityTickSpeedMultiplier": "Entity tick speed multiplier",
+  "text.autoconfig.realisticsleep.option.entityTickSpeedMultiplier.@Tooltip": "How many times faster entities should tick.",
   "text.autoconfig.realisticsleep.option.tickDelay": "Tick delay",
   "text.autoconfig.realisticsleep.option.tickDelay.@Tooltip": "Adds an amount of ticks delay to every tick, so time goes slower.",
-  "realisticsleep.text.sleep_message": "%d/%d players are sleeping through this ",
+  "realisticsleep.text.sleep_message": "%d/%d players are sleeping through this %s",
   "realisticsleep.text.not_enough_players_sleeping_message": "%d/%d players are currently sleeping. %d/%d players are required to sleep through the %s",
   "realisticsleep.text.night": "night",
   "realisticsleep.text.day": "day",
   "realisticsleep.text.thunderstorm": "thunderstorm",
-  "realisticsleep.text.time_until_dawn": " (time until dawn: %ds)",
-  "realisticsleep.text.time_until_dusk": " (time until dusk: %ds)"
+  "realisticsleep.text.time_until_dawn": " (Time until dawn: %ds)"
 }
