--- a/src/main/resources/assets/realisticsleep/lang/en_us.json
+++ b/src/main/resources/assets/realisticsleep/lang/en_us.json
@@ -2,13 +2,22 @@
   "text.autoconfig.realisticsleep.title": "Realistic Sleep Config",
   "text.autoconfig.realisticsleep.option.sendDawnMessage": "Send dawn message?",
   "text.autoconfig.realisticsleep.option.sendDawnMessage.@Tooltip": "Send a message to all players at dawn.",
+  "text.autoconfig.realisticsleep.option.sendDuskMessage": "Send dusk message?",
+  "text.autoconfig.realisticsleep.option.sendDuskMessage.@Tooltip": "Send a message to all players at dusk.",
+  "text.autoconfig.realisticsleep.option.dawnMessage": "Dawn message",
   "text.autoconfig.realisticsleep.option.dawnMessage.@Tooltip": "The message displayed to all players at dawn.",
+  "text.autoconfig.realisticsleep.option.duskMessage": "Dusk message",
+  "text.autoconfig.realisticsleep.option.duskMessage.@Tooltip": "The message displayed to all players at dawn.",
   "text.autoconfig.realisticsleep.option.sendSleepingMessage": "Send sleeping message?",
   "text.autoconfig.realisticsleep.option.sendSleepingMessage.@Tooltip": "Toggles the \"players are sleeping through this night...\" message.",
   "text.autoconfig.realisticsleep.option.showTimeUntilDawn": "Show time until dawn?",
   "text.autoconfig.realisticsleep.option.showTimeUntilDawn.@Tooltip": "Displays the seconds until dawn.",
+  "text.autoconfig.realisticsleep.option.showTimeUntilDusk": "Show time until dusk?",
+  "text.autoconfig.realisticsleep.option.showTimeUntilDusk.@Tooltip": "Displays the seconds until dusk.",
   "text.autoconfig.realisticsleep.option.sendNotEnoughPlayersSleepingMessage": "Send not enough players sleeping message?",
   "text.autoconfig.realisticsleep.option.sendNotEnoughPlayersSleepingMessage.@Tooltip": "Toggles the amount of players who need to sleep to skip to dawn message.",
+  "text.autoconfig.realisticsleep.option.allowDaySleeping": "Allow sleeping through the day?",
+  "text.autoconfig.realisticsleep.option.allowDaySleeping.@Tooltip": "Toggles daytime sleeping.",
   "text.autoconfig.realisticsleep.option.sleepSpeedCurve": "Sleep speed curve",
   "text.autoconfig.realisticsleep.option.sleepSpeedCurve.@Tooltip": "The curve used to determine the speed multiplier of the night as time progresses.",
   "text.autoconfig.realisticsleep.option.sleepSpeedMultiplier": "Sleep speed multiplier",
@@ -28,5 +37,6 @@
   "realisticsleep.text.night": "night",
   "realisticsleep.text.day": "day",
   "realisticsleep.text.thunderstorm": "thunderstorm",
-  "realisticsleep.text.time_until_dawn": " (time until dawn: %ds)"
+  "realisticsleep.text.time_until_dawn": " (time until dawn: %ds)",
+  "realisticsleep.text.time_until_dusk": " (time until dusk: %ds)"
 }
