--- a/src/main/resources/assets/realisticsleep/lang/en_us.json
+++ b/src/main/resources/assets/realisticsleep/lang/en_us.json
@@ -42,8 +42,8 @@
   "text.autoconfig.realisticsleep.option.blockRandomTickSpeedMultiplier.@Tooltip": "How many times faster blocks should random tick. Enable at your own risk, may cause huge TPS loss!",
   "text.autoconfig.realisticsleep.option.fluidRandomTickSpeedMultiplier": "Fluid random tick speed multiplier",
   "text.autoconfig.realisticsleep.option.fluidRandomTickSpeedMultiplier.@Tooltip": "How many times faster fluids should random tick. Enable at your own risk, may cause huge TPS loss!",
-  "text.autoconfig.realisticsleep.option.cloudSpeedMultiplier": "Cloud speed multiplier",
-  "text.autoconfig.realisticsleep.option.cloudSpeedMultiplier.@Tooltip": "How many times faster clouds should move.",
+  "text.autoconfig.realisticsleep.option.worldRenderingSpeedMultiplier": "World rendering speed multiplier",
+  "text.autoconfig.realisticsleep.option.worldRenderingSpeedMultiplier.@Tooltip": "How many times faster clouds should move, rain should fall, and thunder should strike.",
   "text.autoconfig.realisticsleep.option.tickDelay": "Tick delay",
   "text.autoconfig.realisticsleep.option.tickDelay.@Tooltip": "Adds an amount of ticks delay to every tick, so time goes slower.",
   "realisticsleep.text.sleep_message": "%d/%d players are sleeping through this ",
