--- a/src/main/resources/data/realisticsleep/lang/en_us.json
+++ b/src/main/resources/data/realisticsleep/lang/en_us.json
@@ -42,7 +42,7 @@
   "text.autoconfig.realisticsleep.option.blockRandomTickSpeedMultiplier.@Tooltip": "How many times faster blocks should random tick. Enable at your own risk, may cause huge TPS loss!",
   "text.autoconfig.realisticsleep.option.fluidRandomTickSpeedMultiplier": "Fluid random tick speed multiplier",
   "text.autoconfig.realisticsleep.option.fluidRandomTickSpeedMultiplier.@Tooltip": "How many times faster fluids should random tick. Enable at your own risk, may cause huge TPS loss!",
-  "text.autoconfig.realisticsleep.option.worldRendererTickSpeedMultiplier": "World rendering speed multiplier",
+  "text.autoconfig.realisticsleep.option.worldRendererTickSpeedMultiplier": "World renderer tick speed multiplier",
   "text.autoconfig.realisticsleep.option.worldRendererTickSpeedMultiplier.@Tooltip": "How many times faster clouds should move, rain should fall, and thunder should strike.",
   "text.autoconfig.realisticsleep.option.tickDelay": "Tick delay",
   "text.autoconfig.realisticsleep.option.tickDelay.@Tooltip": "Adds an amount of ticks delay to every tick, so time goes slower.",
