--- a/src/main/resources/data/realisticsleep/lang/ru_ru.json
+++ b/src/main/resources/data/realisticsleep/lang/ru_ru.json
@@ -1,11 +1,23 @@
 {
   "text.autoconfig.realisticsleep.title": "Конфиг мода Realistic Sleep",
+  "text.autoconfig.realisticsleep.option.sendDawnMessage": "Отправлять сообщение о рассвете?",
+  "text.autoconfig.realisticsleep.option.sendDawnMessage.@Tooltip": "Отправлять сообщение всем игрокам на панель действий при рассвете.",
+  "text.autoconfig.realisticsleep.option.sendDuskMessage": "Отправлять сообщение о закате?",
+  "text.autoconfig.realisticsleep.option.sendDuskMessage.@Tooltip": "Отправлять сообщение всем игрокам на панель действий при закате.",
   "text.autoconfig.realisticsleep.option.dawnMessage": "Сообщение о рассвете",
   "text.autoconfig.realisticsleep.option.dawnMessage.@Tooltip": "Сообщение, которое будет отображаться у всех игроков на панели действий после того, как они проспят.",
+  "text.autoconfig.realisticsleep.option.duskMessage": "Сообщение о закате",
+  "text.autoconfig.realisticsleep.option.duskMessage.@Tooltip": "Сообщение, которое будет отображаться у всех игроков на панели действий после заката.",
   "text.autoconfig.realisticsleep.option.sendSleepingMessage": "Отправить сообщение о сне?",
   "text.autoconfig.realisticsleep.option.sendSleepingMessage.@Tooltip": "Переключает \"x/y игроков спят этой ночью (до рассвета осталось: z)\" сообщение на панели действий.",
+  "text.autoconfig.realisticsleep.option.showTimeUntilDawn": "Показывать время до рассвета?",
+  "text.autoconfig.realisticsleep.option.showTimeUntilDawn.@Tooltip": "Показывать количество секунд до рассвета на панели действий.",
+  "text.autoconfig.realisticsleep.option.showTimeUntilDusk": "Показывать время до заката?",
+  "text.autoconfig.realisticsleep.option.showTimeUntilDusk.@Tooltip": "Показывать количество секунд до заката на панели действий.",
   "text.autoconfig.realisticsleep.option.sendNotEnoughPlayersSleepingMessage": "Отправить сообщение о недостаточном количестве спящих игроков?",
   "text.autoconfig.realisticsleep.option.sendNotEnoughPlayersSleepingMessage.@Tooltip": "Переключает \"x/y игроков сейчас спят. Требуется z/w игроков чтобы проспать ночь.\" сообщение на панели действий.",
+  "text.autoconfig.realisticsleep.option.allowDaySleeping": "Разрешить спать днём?",
+  "text.autoconfig.realisticsleep.option.allowDaySleeping.@Tooltip": "Переключает возможность спать днём.",
   "text.autoconfig.realisticsleep.option.sleepSpeedCurve": "Кривая скорости сна",
   "text.autoconfig.realisticsleep.option.sleepSpeedCurve.@Tooltip": "Кривая, которая используется для определения множителя скорости ночи с течением времени.",
   "text.autoconfig.realisticsleep.option.sleepSpeedMultiplier": "Множитель скорости сна",
@@ -15,9 +27,30 @@
   "text.autoconfig.realisticsleep.option.chunkTickSpeedMultiplier": "Множитель скорости тика чанка",
   "text.autoconfig.realisticsleep.option.chunkTickSpeedMultiplier.@Tooltip": "Во сколько раз быстрее должны тикать чанки. Не зря по умолчанию эта функция отключена, включайте на свой страх и риск. Безумная потеря TPS гарантирована.",
   "text.autoconfig.realisticsleep.option.raidTickSpeedMultiplier": "Множитель скорости тика рейда",
-  "text.autoconfig.realisticsleep.option.raidTickSpeedMultiplier.@Tooltip": "Во сколько раз быстрее должны тикать таймеры рейда .",
-  "text.autoconfig.realisticsleep.option.entityTickSpeedMultiplier": "Множитель скорости тика сущности",
-  "text.autoconfig.realisticsleep.option.entityTickSpeedMultiplier.@Tooltip": "Во сколько раз быстрее должны тикать сущности.",
+  "text.autoconfig.realisticsleep.option.raidTickSpeedMultiplier.@Tooltip": "Во сколько раз быстрее должны тикать таймеры рейда.",
+  "text.autoconfig.realisticsleep.option.fluidScheduledTickSpeedMultiplier": "Множитель скорости запланированных тиков жидкостей",
+  "text.autoconfig.realisticsleep.option.fluidScheduledTickSpeedMultiplier.@Tooltip": "Во сколько раз быстрее жидкости должны растекаться.",
+  "text.autoconfig.realisticsleep.option.thunderTickSpeedMultiplier": "Множитель скорости тика грозы",
+  "text.autoconfig.realisticsleep.option.thunderTickSpeedMultiplier.@Tooltip": "Во сколько раз быстрее должен греметь гром.",
+  "text.autoconfig.realisticsleep.option.iceAndSnowTickSpeedMultiplier": "Множитель скорости формирования льда и снега",
+  "text.autoconfig.realisticsleep.option.iceAndSnowTickSpeedMultiplier.@Tooltip": "Во сколько раз быстрее должен формироваться лёд и снег.",
+  "text.autoconfig.realisticsleep.option.cropGrowthTickSpeedMultiplier": "Множитель скорости роста культур",
+  "text.autoconfig.realisticsleep.option.cropGrowthTickSpeedMultiplier.@Tooltip": "Во сколько раз быстрее должны расти культуры.",
+  "text.autoconfig.realisticsleep.option.precipitationTickSpeedMultiplier": "Множитель скорости выпадения осадков",
+  "text.autoconfig.realisticsleep.option.precipitationTickSpeedMultiplier.@Tooltip": "Во сколько раз быстрее должны заполняться котлы.",
+  "text.autoconfig.realisticsleep.option.blockRandomTickSpeedMultiplier": "Множитель скорости случайных тиков блоков",
+  "text.autoconfig.realisticsleep.option.blockRandomTickSpeedMultiplier.@Tooltip": "Во сколько раз быстрее должны происходить случайные тики блоков. Включайте на свой страх и риск, может привести к большим потерям ТПС!",
+  "text.autoconfig.realisticsleep.option.fluidRandomTickSpeedMultiplier": "Множитель скорости случайных тиков жидкостей",
+  "text.autoconfig.realisticsleep.option.fluidRandomTickSpeedMultiplier.@Tooltip": "Во сколько раз быстрее должны происходить случайные тики жидкостей. Включайте на свой страх и риск, может привести к большим потерям ТПС!",
+  "text.autoconfig.realisticsleep.option.worldRendererTickSpeedMultiplier": "Множитель скорости отрисовки мира",
+  "text.autoconfig.realisticsleep.option.worldRendererTickSpeedMultiplier.@Tooltip": "Во сколько раз быстрее облака должны двигаться, дождь должен падать и молнии должны ударять.",
   "text.autoconfig.realisticsleep.option.tickDelay": "Задержка тика",
-  "text.autoconfig.realisticsleep.option.tickDelay.@Tooltip": "Добавляет количество тиков задержки к каждому тику, так что время идет медленнее."
+  "text.autoconfig.realisticsleep.option.tickDelay.@Tooltip": "Добавляет количество тиков задержки к каждому тику, так что время идет медленнее.",
+  "realisticsleep.text.sleep_message": "%d/%d игроков сейчас пропускают ",
+  "realisticsleep.text.not_enough_players_sleeping_message": "%d/%d игроков сейчас спит. %d/%d игроков необходимо для пропуска %s",
+  "realisticsleep.text.night": "ночь",
+  "realisticsleep.text.day": "день",
+  "realisticsleep.text.thunderstorm": "гроза",
+  "realisticsleep.text.time_until_dawn": " (время до рассвета: %ds)",
+  "realisticsleep.text.time_until_dusk": " (время до заката: %ds)"
 }
